--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "untranspiled-js-library-skeleton",
+  "name": "async-autocomplete-cli",
   "version": "0.0.0-development",
-  "description": "my skeleton for transpiler-free JS packages",
+  "description": "tool for prompting the user to select from a list of choices, where the choices are fetched asynchronously, and new choices are fetched as the user types",
   "main": "index.js",
   "author": "Andy Edwards",
   "license": "MIT",
+  "engines": {
+    "node": ">=10.0.0"
+  },
+  "files": [
+    "elements",
+    "util",
+    "index.js",
+    "*.js.flow",
+    "*.d.ts"
+  ],
   "scripts": {
-    "lint": "eslint *.js test --cache",
-    "lint:fix": "eslint --fix *.js test --cache",
-    "prettier": "prettier --write *.js 'test/**/*.js' *.json *.md",
-    "prettier:check": "prettier --list-different *.js 'test/**/*.js' *.json *.md",
+    "lint": "eslint $npm_package_config_eslint --cache",
+    "lint:fix": "eslint --fix $npm_package_config_eslint --cache",
+    "prettier": "prettier --write $npm_package_config_prettier",
+    "prettier:check": "prettier --list-different $npm_package_config_prettier",
     "test": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text mocha $npm_package_config_mocha",
     "test:watch": "cross-env NODE_ENV=test mocha --watch $npm_package_config_mocha",
     "test:debug": "cross-env NODE_ENV=test mocha --inspect-brk $npm_package_config_mocha",
     "codecov": "nyc report --reporter=text-lcov > coverage.lcov; codecov",
-    "prepublishOnly": "npm run lint && npm test",
+    "prepublishOnly": "npm run lint && flow && tsc && npm test",
     "open:coverage": "open coverage/lcov-report/index.html",
     "semantic-release": "semantic-release"
   },
@@ -31,6 +41,8 @@
     ]
   },
   "config": {
+    "eslint": "*.js elements util test",
+    "prettier": "*.js *.json *.md elements/**/*.js util/**/*.js test/**/*.js",
     "mocha": "test/configure.js 'test/**/*.js'",
     "commitizen": {
       "path": "cz-conventional-changelog"
@@ -48,7 +60,9 @@
   },
   "nyc": {
     "include": [
-      "*.js"
+      "*.js",
+      "elements/*.js",
+      "util/*.js"
     ],
     "exclude": [
       "commitlint.config.js"
@@ -56,15 +70,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jedwards1211/untranspiled-js-library-skeleton.git"
+    "url": "https://github.com/jcoreio/async-autocomplete-cli.git"
   },
   "keywords": [
-    "skeleton"
+    "cli",
+    "autocomplete",
+    "list",
+    "picker",
+    "choices",
+    "async",
+    "async-await"
   ],
   "bugs": {
-    "url": "https://github.com/jedwards1211/untranspiled-js-library-skeleton/issues"
+    "url": "https://github.com/jcoreio/async-autocomplete-cli/issues"
   },
-  "homepage": "https://github.com/jedwards1211/untranspiled-js-library-skeleton#readme",
+  "homepage": "https://github.com/jcoreio/async-autocomplete-cli#readme",
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
@@ -73,8 +93,10 @@
     "chai": "^4.1.2",
     "codecov": "^3.7.2",
     "cross-env": "^5.2.0",
+    "dedent-js": "^1.0.1",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
+    "flow-bin": "^0.142.0",
     "husky": "^4.3.0",
     "istanbul": "^0.4.5",
     "lint-staged": "^10.4.0",
@@ -82,7 +104,11 @@
     "nyc": "^11.4.1",
     "prettier": "^1.15.1",
     "prettier-eslint": "^8.8.2",
-    "semantic-release": "^17.1.2"
+    "semantic-release": "^17.1.2",
+    "typescript": "^4.1.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "kleur": "^4.1.3",
+    "sisteransi": "^1.0.5"
+  }
 }
